--- a/templates/chain.html
+++ b/templates/chain.html
@@ -19,7 +19,11 @@
 </form>
 <br>
 
-<a href="/delete_chain/{{ id }}">Poista ketju</a> <br>
+<form action="/delete_chain" method="post">
+    <input type="submit" value="poista ketju">
+    <input type="hidden" name="id" value="{{ id }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+</form><br>
 <hr>{% else %}
 <p> Et ole kirjautunyt sisään! Kirjaudu sisään voidaksesi nähdä tämän sivun.</p>
 <a href="/login">Kirjaudu sisään</a>
